<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clear_log_button_text"
            android:id="@+id/button2"
            android:layout_alignParentStart="true" android:layout_alignEnd="@+id/button"
            android:onClick="onClickClearLog"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datachanged_button"
            android:id="@+id/button"
            android:clickable="true"
            android:onClick="onClickTriggerDataChanged" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" android:layout_below="@+id/button2"/>
    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton" android:layout_below="@+id/button"
            android:checked="false" android:layout_alignParentEnd="true"
            android:onClick="onToggleSizeCheckOnNextBackup"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/will_check_size_text"
            android:id="@+id/textView" android:layout_below="@+id/button"
            android:layout_alignParentStart="true" android:layout_alignBottom="@+id/toggleButton"
            android:layout_toStartOf="@+id/toggleButton"
            />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/toggleButton"
            android:layout_alignParentEnd="true" android:id="@+id/sizeCheckConfigLayout">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sizeTestNumText"
                android:id="@+id/textView3"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sizeCheckDataNum" android:layout_weight="1" android:inputType="number"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_test_data_amount"
                android:id="@+id/textView4"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sizeCheckByteNum" android:layout_weight="1" android:inputType="number"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_restore_btext"
            android:id="@+id/requestRestoreButton" android:layout_below="@+id/sizeCheckConfigLayout"
            android:layout_alignParentStart="true" android:layout_alignEnd="@+id/toggleButton"
            android:onClick="onClickRequestRestore"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/log_title_text"
            android:id="@+id/textView2"  android:layout_below="@+id/requestRestoreButton"
            android:layout_toStartOf="@+id/toggleButton" android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignParentStart="true" android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logText"/>
    </ScrollView>

</RelativeLayout>
